Created python script that traverses the entire src folder and spits out on giant json file that can then be parsed by the javascript, and sprites can be loaded by file name. (This is what happens when you don't want to use a server/backend)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <div id="pokemonList">
     </div>
-    <img src="src/crystal/1.png"/>
+    <img id="testimg">
   </body>
+    <script src="imgDirJson.js"></script>
   <script src="main.js"></script>
 </html>
