--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
-    <div id="pokemonSelectContainer">
-      <select id="dropdown">
-      </select>
-      <form autocomplete="off">
-        <div class="autocomplete" style="width:300px;">
-          <input id="autocompleteInput" type="text" name="autocompleteInput" placeholder="Search for Pokemon...">
-        </div>
-      </form>
-    </div>
-  </body>
-    <script src="imgDirStructure.js"></script>
-    <script src="pkmnNrNameMap.js"></script>
-    <script src="pkmnNameNrMap.js"></script>
-    <script src="main.js"></script>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+
+<body>
+  <div id="pokemonSelectContainer">
+    <select id="dropdown">
+    </select>
+    <form autocomplete="off">
+      <div class="autocomplete" style="width:300px;">
+        <input id="autocompleteInput" type="text" name="autocompleteInput" placeholder="Search for Pokemon...">
+      </div>
+    </form>
+  </div>
+  <div id="imgSelectContainer">
+  </div>
+</body>
+<script src="imgDirStructure.js"></script>
+<script src="pkmnNrNameMap.js"></script>
+<script src="pkmnNameNrMap.js"></script>
+<script src="pathByNr.js"></script>
+<script src="main.js"></script>
+
 </html>
